--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;400;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Libre+Barcode+128+Text&family=Noto+Sans+JP:wght@100;400;900&display=swap"
       rel="stylesheet"
     />
     <title>Vite + React + TS</title>
