meta情報の追記

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -10,7 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Libre+Barcode+128+Text&family=Noto+Sans+JP:wght@100;400;900&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React + TS</title>
+    <title>Miku SNS</title>
+    <meta name="description" content="初音ミクが楽曲に合わせて投稿してくれるSNSです！"/>
   </head>
   <body>
     <div id="root"></div>
