パフォーマンス調整

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <title>Miku SNS</title>
     <meta name="description" content="初音ミクが楽曲に合わせて投稿してくれるSNSです！"/>
-    <meta name="theme-color" content="#04c9ff">
+    <meta name="theme-color" content="#50c9c3">
   </head>
   <body>
     <div id="root"></div>
